--- a/carousel.component.html
+++ b/carousel.component.html
@@ -8,7 +8,7 @@
           </div>
         </div>
 
-       <div class="row">
+       <div class="row test">
          <div class="col-md-12">
            <ngx-slick-carousel class="carousel mx-5"
                                #slickModal="slick-carousel"
@@ -23,7 +23,7 @@
                <p class="slide-item">{{item.description}}</p>
              </div>
 
-             
+
            </ngx-slick-carousel>
          </div>
        </div>
