[Added] image on carousel

--- a/carousel.component.html
+++ b/carousel.component.html
@@ -17,7 +17,8 @@
                                (breakpoint)="breakpoint($event)"
                                (afterChange)="afterChange($event)"
                                (beforeChange)="beforeChange($event)">
-             <div ngxSlickItem class="slide text-center" *ngFor="let item of news.carousel">
+             <div ngxSlickItem class="slide text-center" *ngFor="let item of news.home.carousel">
+               <img src="{{item.image}}" alt="" />
                <h1>{{item.title}}</h1>
                <h4>{{item.label}}</h4>
                <p class="slide-item">{{item.description}}</p>
