--- a/carousel.component.css
+++ b/carousel.component.css
@@ -2,3 +2,9 @@
   font-size: 14px;
   color: black;
 }
+
+.carousel.slick-initialized .slick-slide{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
